feat: add the mission's api management
